Bug 162920 - View - Comments toggle no longer has an effect
Summary: View - Comments toggle no longer has an effect
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:25.8.0 target:25.2.0.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: ImpressDraw-Comments
  Show dependency treegraph
 
Reported: 2024-09-11 12:24 UTC by Buovjaga
Modified: 2025-02-03 09:05 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2024-09-11 12:24:20 UTC
In Impress or Draw, try to hide comment indicators via View - Comments. You can't, the indicators stay visible.

Bibisected with linux-64-25.2 to e17c56bfc7930d3c14c3ff4cfd59828e8dcc0229
annot: new Annotation sdr object, replacing annotation tags
Comment 1 Telesto 2024-09-11 13:07:43 UTC
Confirm
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: c52f139b4f7140033144dde29f70a39ebedb6aa0
CPU threads: 4; OS: Windows 8.1 X86_64 (6.3 build 9600); UI render: Skia/Raster; VCL: win
Locale: nl-NL (nl_NL); UI: nl-NL
Calc: CL threaded
Comment 2 Commit Notification 2025-01-03 05:39:29 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9e1e48d73014471ebc2ea4f3589276cace096613

tdf#162920 make show/hide comments working again

It will be available in 25.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-01-03 11:12:58 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/a178959cb68360f05ce625a6aaf698aa657f82fc

tdf#162920 make show/hide comments working again

It will be available in 25.2.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Buovjaga 2025-01-03 11:13:19 UTC
Verified, thanks.

Arch Linux 64-bit
Version: 25.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4d1dff8835a2c52f2adf767596a367695a9e1a5
CPU threads: 8; OS: Linux 6.12; UI render: default; VCL: kf6 (cairo+wayland)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: CL threaded
Built on 3 January 2025
Comment 5 ulyssesmiller 2025-02-03 07:43:05 UTC Comment hidden (spam)