tdf#162920 make show/hide comments working again

use SdrObject::SetVisible to change the annotation's visibility
status.

Change-Id: I8002294351c64830ad294c43f6ee92425456ac0d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/179661
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>
Tested-by: Jenkins